client.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  labels:
    app.kubernetes.io/name: istio-grpc-test-client
  name: istio-grpc-test-client
  namespace: istio-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istio-grpc-test
      component: client
  strategy: {}
  template:
    metadata:
      labels:
        app: istio-grpc-test
        component: client
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      restartPolicy: Always
      containers:
        - image: owais/istio-grpc-test:dev-ef5fd3d
          name: istio-grpc-test
          args:
            - client 
          imagePullPolicy: Always
          resources:
            requests:
              memory: "60Mi"
              cpu: "100m"
            limits:
              memory: "60Mi"
              cpu: "100m"
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: istio-grpc-test-client
  namespace: istio-test
spec:
  egress:
  - hosts:
    - istio-system/*
    - istio-test/istio-grpc-test-server.istio-test.svc.cluster.local
  workloadSelector:
    labels:
      app: istio-grpc-test
      component: client
