server.yaml
apiVersion: v1
kind: Namespace 
metadata:
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: istio-test
  name: istio-test
---
apiVersion: apps/v1
kind: StatefulSet 
metadata:
  labels:
    app.kubernetes.io/name: istio-grpc-test-server
  name: istio-grpc-test-server
  namespace: istio-test
spec:
  serviceName: istio-grpc-test-server
  replicas: 3
  selector:
    matchLabels:
      app: istio-grpc-test
      component: server
  template:
    metadata:
      labels:
        app: istio-grpc-test
        component: server
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      restartPolicy: Always
      containers:
        - image: owais/istio-grpc-test:dev-db1dfcf
          name: istio-grpc-test
          args:
            - server
          imagePullPolicy: Always
          resources:
            requests:
              memory: "60Mi"
              cpu: "100m"
            limits:
              memory: "60Mi"
              cpu: "100m"
          ports:
            - containerPort: 9090
              name: grpc
          readinessProbe:
            initialDelaySeconds: 30
            exec:
              command:
                - echo
                - "ready"
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: istio-grpc-test-server
  namespace: istio-test
spec:
  egress:
  - hosts:
    - istio-system/*
  workloadSelector:
    labels:
      app: istio-grpc-test
      component: server 
---
apiVersion: v1
kind: Service
metadata:
  name: istio-grpc-test-server
  namespace: istio-test
  annotations:
    app: istio-grpc-test
    component: server 
spec:
  clusterIP: None
  selector:
    app: istio-grpc-test
    component: server
  ports:
  #- name: tcp-api 
  - name: grpc-api 
    protocol: TCP
    port: 9090
    targetPort: grpc
